syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string category = 5;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  Product product = 1;
}

message GetProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string category = 3;
  float min_price = 4;
  float max_price = 5;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message UpdateProductRequest {
  Product product = 1;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  int32 id = 1;
}

message DeleteProductResponse {
  string message = 1;
}
